fix loader overflow on buttons

--- a/src/components/SignOutIcon/SignOutIcon.module.css
+++ b/src/components/SignOutIcon/SignOutIcon.module.css
@@ -1,15 +1,15 @@
-svg.icon {
+div.icon_box {
     position: absolute;
     align-self: flex-end;
 
     top: 0;
+    margin-top: 4vh;
+}
 
+svg.icon {
     font-size: 4vh;
-
     cursor: pointer;
     transition: 0.2s all;
-
-    margin-top: 4vh;
 }
 
 svg.icon:hover {
